--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.6.3",
     "jasmine": "^5.6.0",
     "next": "15.2.4",
+    "node": "^23.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.86.3"
