--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jasmine": "^5.1.7",
     "framer-motion": "^12.6.3",
     "jasmine": "^5.6.0",
     "next": "15.2.4",
