--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "@types/jasmine": "^5.1.7",
     "framer-motion": "^12.6.3",
-    "jasmine": "^5.6.0",
     "next": "15.2.4",
     "node": "^23.11.0",
     "react": "^19.0.0",
@@ -20,11 +19,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.3.1",
     "typescript": "^5"
   }
 }
